Now we use an external WildFly 8.1.0.Final installation instead of unzipping a fresh installation every time we run the application. Updated README with more instructions and how to debug GWT.